--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,9 @@
 {
     "files.associations": {
-        "libft.h": "c"
+        "libft.h": "c",
+        "checker_bonus.h": "c",
+        "get_next_line.h": "c",
+        "push_swap.h": "c",
+        "fcntl.h": "c"
     }
 }
